[package]
name = "og-euler-anunoby"
version = "0.1.0"
authors = ["jamesharden122 <loudonvillewf@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["fullstack", "web", "router"] }
dioxus-logger = "0.6.2"
dioxus-cli-config = { version = "0.6.3", optional = true }
ml_backend = { package = "bento_queries", path = "../bento_queries", optional = true }
serde = { version = "1.0.210", features = ["derive"] }
plotters = "0.3.7"
nalgebra = "0.33.2"
ndarray = "0.16.1"
chrono = { version = "0.4.1", features = ["serde", "clock"] }
surrealdb = { version = "2.3.2", optional = true }
axum = { version = "0.7.0", optional = true }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"], optional = true }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"
strum = "0.25"
strum_macros = "0.25"
dioxus-router = "0.6.3"
polars = { version = "0.51", default-features = false, features = [
  "lazy",
  "temporal", # Duration/Date/Datetime
  "serde", 
  "ndarray",      
  "dtype-date",
  "dtype-datetime",
  "dtype-duration",
  "rolling_window",     # fixed-size windows
  "rolling_window_by",  # time-based windows (…_by)
  "fmt_no_tty",
  "abs",
  "cum_agg",
], optional = true }
gloo-net = "0.6.0"
urlencoding = "2.1.3"
serde_json = "1.0.145"
js-sys = "0.3.80"
rayon = "1.11.0"
dashmap = "6.1.0"
arraydeque = "0.5.1"
arrayvec = "0.7.6"
[features]
default = ["web"]

web = ["dioxus/web"]

server = [
    "dioxus/server",
    "dep:surrealdb",
    "dep:polars",
    "dep:ml_backend",
    "dep:axum",
    "dep:tokio",
    "dep:dioxus-cli-config",
]

desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
